--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>my links</h1>h1>
-  <li><a href="www.google.com">my Javascript_example1</a></li>
+  <li><a href="http://www.google.com">my Javascript_example1</a></li>
 
 </body>
 </html>
